--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ span.hero {
     max-width: 20em;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
 }
 .right-col .summary {
@@ -118,7 +118,7 @@ span.hero {
 .scorecard {
     display: flex;
     flex-direction: column;
-    gap: .6em;
+    gap: .7em;
 }
 .score {
     color: #4b4d52;
