--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,15 @@
 body {
     background-image: url(/assets/images/blob-scene-haikei.svg);
     /*background-image: linear-gradient(#81278d,rgb(159, 201, 159));*/
+    margin: 0;
     background-repeat: no-repeat;
-    margin: 0 auto;
 }
 /*To position the container at the center of the body*/
 .container {
     font-family: 'Ubuntu', sans-serif;
     display: grid;
 } 
+
 
 /*Adjusting the navbar*/
 nav {
@@ -50,7 +51,7 @@ nav ul {
     margin-left: auto;
     margin-right: 2em;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 0.8em;
     flex-grow: 1;
     flex-shrink: 1;
@@ -59,6 +60,9 @@ nav ul {
     padding: 0.5em;
     font-size: 1.2rem;
     list-style: none;
+}
+nav ul li {
+    padding: .3em;
 }
 
 nav ul li a {
@@ -77,10 +81,8 @@ nav ul li a:hover {
     min-width: 10%;
     margin-left: 2em;
     background-image:linear-gradient(#3b334e,#050113); 
-    border: 0em 0.2rem 2em 1em solid rgba(12, 11, 11, 0.85);
 }
 .login {
-   border-radius:100%;
    transition: transform 0.3s;
 }
 
@@ -243,16 +245,19 @@ span.hero {
 .four {background-color: #c1cff5;}
 
 /*The end credit at the bottom*/
-.attribution {
+.container .attribution {
+    margin-bottom: -5em;
+    padding: .3em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     color: whitesmoke;
-    position: absolute;
-    bottom: 0;
-    right: 0;
     font-weight: bold;
     font-size: 0.8rem;
 }
 
 .attribution a {
+    padding-left: .3em;
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
