--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,23 @@
-
-body {
-    background-image: url("../assets/images/blob-scene-haikei.svg");
+* {
     margin: 0;
-    background-repeat: no-repeat;
+    padding: 0;
+    box-sizing: border-box;
 }
+body {
+   background: url("../assets/images/blob-scene-haikei.svg") no-repeat;
+    background-position: center;
+    background-size:cover;
+    height: 100%;
+}
+
 /*To position the container at the center of the body*/
 .container {
+    height: 100vh;
     font-family: 'Ubuntu', sans-serif;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
 } 
 
 
@@ -16,10 +26,9 @@ nav {
     gap: 1.1em;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     border-bottom: 1px solid rgba(134, 125, 125,65%);
     box-shadow: 0em .5em 1em #33362f;
-    background-image: linear-gradient( #f3fae4, #d4ab23);    
+    background: linear-gradient( #f3fae4, #d4ab23);    
 }
 
 /*adjusting the college logo*/
@@ -27,9 +36,11 @@ nav {
     height: 7em;
     width: 7em;
     padding: .5em;
-    margin-left: 2.5%;   
+    margin-left: 1vw;
+    margin-right: auto;   
 }
 
+/*
 .uni-name {
     margin-left: -1em;
     margin-right: auto;
@@ -43,24 +54,22 @@ nav {
     padding: .5em;
     max-width: min-content;
 }
+*/
 
 /*organising the ul elements*/
 nav ul {
-    max-width: 50%;
-    margin-left: auto;
-    margin-right: 2em;
     display: flex;
-    justify-content: space-around;
-    gap: 0.8em;
-    flex-grow: 1;
-    flex-shrink: 1;
-    align-items: center;
-    text-align: center;
-    padding: 0.5em;
-    font-size: 1.2rem;
+    justify-content: end;
+    flex-wrap: wrap;
     list-style: none;
+    gap: 0.5em;
+    margin-left: auto;
+    margin-right: 0;
 }
 nav ul li {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.1rem;
     padding: .3em;
 }
 
@@ -77,8 +86,8 @@ nav ul li a:hover {
     justify-content: center;
     align-items: center;
     height: 100%;
-    min-width: 10%;
-    margin-left: 2em;
+    min-width: 10vw;
+    margin-left: 0;
     background-image:linear-gradient(#3b334e,#050113); 
 }
 .login {
@@ -89,30 +98,39 @@ nav ul li a:hover {
     transform: scale3d(1.1,1.1,1.1);
 }
 
+
+
+
+
 /*the main wrapper consisting of two columns*/
 .wrapper {
+    position: relative;
+    z-index: 1;
     margin: 10em auto;
     border-radius: 1.6em;
     display: flex;
-    justify-content: center;
-    min-height: 30em;
-    max-height: 35em;
-    background-image: linear-gradient(to top, #a8bd9f, #bb89f5);
+    flex: 1;
+    flex-wrap: wrap;
+    aspect-ratio: 1.33;
     box-shadow: 0.5em 0.5em 1em #33362f;
 }
-
-
-
-
+.wrapper::before {
+    content: " ";
+    position: absolute;
+    width: 100%; 
+    height: 100%;  
+    opacity: .8; 
+    z-index: -1;
+    background-image: linear-gradient(#aea5c4,#75e037);
+    border-radius: 1.6em;
+}
 
 /*left column of the wrapper*/
 
 .left-col {
-    min-width: 15em;
-    max-width: 18em;
     color: white;
     padding: 1em;
-    background-image: linear-gradient(#7e50f2,#240587);
+    max-width: 50%;   
     border-radius: 1.6em;
     display: flex;
     flex-direction: column;
@@ -120,21 +138,36 @@ nav ul li a:hover {
     justify-content: center;
     gap: 1em;
     transition: transform 0.5s;
+    box-shadow: 0.5em 0.5em 1em #33362f;
 }
-.left-col:hover {
+
+.left-col::before{
+    content: " ";
+    position: absolute;
+    width: 100%; 
+    height: 100%;  
+    opacity: .8; 
+    z-index: -1;
+    border-radius: 1.6em;
+    background-image: linear-gradient(#7e50f2,#240587);
+    max-width: 50%;
+}
+.left-col::before:hover {
     transform: scale3d(1.1,1.1,1.1);
 }
+
 span.hero {
     margin-top: 2em;
     color: rgba(255, 255, 255, 0.75);
 }
 .my-score {
     margin-top: 0.7em;
+    margin-left: 0;
     background-image: none;
     box-shadow: 0 -3em 3em #2b1697 inset;
     padding: 1em;
-    min-width: 55%;
-    min-height:30%;
+    min-width: 65%;
+    min-height:40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -172,15 +205,15 @@ span.hero {
 
 
 /* Right column of the wrapper */
-
-
 .right-col {
-    padding: 2em;
-    min-width: 16em;
+    margin: 3em 1em;
+    padding: 1em;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    flex-grow: 1;
+    justify-content: space-between;
     transition: transform 1s;
+    gap: 2em;
 }
 .right-col:hover {
     transform: scale3d(1.1,1.1,1.1);
@@ -189,14 +222,14 @@ span.hero {
     font-weight: stronger;
     font-size: 1.2em;
 }
-#stats {
+.stats {
     display: flex;
     gap: .5em;
     padding: .8em;
     border-radius: .7em;
     transition: transform .3s ease;
 }
-#stats:hover {
+.stats:hover {
     transform: scale3d(1.1,1.1,1.1);
 }
 .scorecard {
@@ -226,8 +259,7 @@ span.hero {
 }
 
 .continue-button:hover {
-    transform: scale3d(1.1,1.1,1.1);
-    
+    transform: scale3d(1.1,1.1,1.1);   
     background-color: #131413;
     box-shadow: .5em .5em 1em #cad9b2 ;
 }
@@ -238,21 +270,19 @@ span.hero {
 .ver {color: #5bdeb0;}
 .vis {color: #2a5cd1;}
 /*Adding individual background color to each of the stats*/
-.one {background-color: #f7f1ed;}
-.two {background-color: #e8e2cf;}
-.three {background-color: #c8e6d5;}
-.four {background-color: #c1cff5;}
+#one {background-color: #f7f1ed;}
+#two {background-color: #e8e2cf;}
+#three {background-color: #c8e6d5;}
+#four {background-color: #c1cff5;}
 
 /*The end credit at the bottom*/
 .container .attribution {
-    margin-bottom: -5em;
-    padding: .3em;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
     color: whitesmoke;
     font-weight: bold;
     font-size: 0.8rem;
+    opacity: 80%;
 }
 
 .attribution a {
@@ -260,5 +290,5 @@ span.hero {
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
-    color: #06cee9;
+    color: #3e9ca8;
 }
